# df2streamlit

./: README.md  dashboard.py  pyproject.toml
docs/: Makefile  conf.py  index.rst
src/df2streamlit/: __init__.py  example.csv
